--- a/source/form.html
+++ b/source/form.html
@@ -3,177 +3,192 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page__body">
-  <!--Шапка-->
-  <header class="header">
-    <a class="header__logo">
-      <img src="/img/logo_sedona.svg" width="185" height="96" alt="Логотип Седоны">
-    </a>
-    <nav class="nav">
-      <button class="nav__toggle" type="button">
-        <span class="visually-hidden">Открыть меню</span>
-      </button>
-      <ul class="nav__list site-list">
-        <li class="site-list__item">
-          <a class="site-list__link" href="index.html">Главная</a>
-        </li>
-        <li class="site-list__item">
-          <a class="site-list__link" href="catalog.html">Фото и видео</a>
-        </li>
-        <li class="site-list__item">
-          <a class="site-list__link site-list__item--current">Форма отзыва</a>
-        </li>
-        <li class="site-list__item">
-          <a class="site-list__link" href="https://htmlacademy.ru">html Academy</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <!--Основное содержание-->
-  <main class="main-container">
-    <h1 class="visually-hidden">Формы</h1>
-    <header class="welcome welcome--catalog">
-      <img class="welcome__img welcome__img--catalog" src="/img/catalog/sedona.svg" width="229" height="39"
-        alt="Седона">
-    </header>
-    <section class="about-form">
-      <h2 class="about-form__title">Оставьте свой отзыв</h2>
-      <p class="about-form__description">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о
-        посещенных вами достопримечательностях</p>
-    </section>
-    <section class="forms">
-      <h2 class="visually-hidden">Формы для заполнения</h2>
-      <form class="feedback" action="https://echo.htmlacademy.ru/" method="post">
-        <fieldset class="feedback__field">
-          <legend class="text-block__title">Представьтесь:</legend>
-          <label class="feedback__form-label" for="name">
-            ИМЯ*:</label>
-          <input class="feedback__input" type="text" id="name" name="name" placeholder="Петр" required>
-          <label class="feedback__form-label" for="surname">
-            ФАМИЛИЯ*:</label>
-          <input class="feedback__input" type="text" id="surname" name="surname" placeholder="Пустота" required>
-          <label class="feedback__form-label" for="father-name">
-            Отчество:</label>
-          <input class="feedback__input" type="text" id="father-name" name="father-name" placeholder="Викторович"
-            required>
-        </fieldset>
-        <fieldset class="feedback__field">
-          <legend class="text-block__title">Контактная информация:</legend>
-          <label class="feedback__form-label" for="number">Контактный телефон*:</label>
-          <input class="feedback__input feedback__input--contacts" placeholder="Введите телефон" type="tel"
-            name="phone-number" id="number" required>
-
-          <button class="feedback__button" type="button">
-            <span class="visually-hidden">Телефон</span>
+  <div class="page__container">
+    <div class="page__shadow">
+      <!--Шапка-->
+      <header class="header">
+        <a class="header__logo">
+          <img src="/img/logo_sedona.svg" width="185" height="96" alt="Логотип Седоны">
+        </a>
+        <nav class="nav">
+          <button class="nav__toggle" type="button">
+            <span class="visually-hidden">Открыть меню</span>
           </button>
-          <label class="feedback__form-label" for="email">Электронная почта*:</label>
-          <input class="feedback__input feedback__input--contacts" placeholder="Введите e-mail" type="email"
-            name="email" id="email" required>
-
-          <button class="feedback__button" type="button">
-            <span class="visually-hidden">Почта</span>
-          </button>
-        </fieldset>
-        <fieldset class="feedback__field">
-          <legend class="text-block__title">ВАше Общее впечатление:</legend>
-          <ul class="feedback__list">
-            <li class="feedback__item">
-              <label class="feedback__form-label">
-                <input class="feedback__choice" type="radio" name="feedback" value="mostly positive" checked>
-                <span class="control-label">Скорее положительное</span>
-              </label>
+          <ul class="nav__list site-list">
+            <li class="site-list__item">
+              <a class="site-list__link" href="index.html">Главная</a>
             </li>
-            <li class="feedback__item">
-              <label class="feedback__form-label">
-                <input class="feedback__choice" type="radio" name="feedback" value="mostly negative" checked>
-                <span class="control-label">Скорее отрицательное</span>
-              </label>
+            <li class="site-list__item">
+              <a class="site-list__link" href="catalog.html">Фото и видео</a>
             </li>
-            <li class="feedback__item">
-              <label class="feedback__form-label">
-                <input class="feedback__choice" type="radio" name="feedback" value="hard to say" checked>
-                <span class="control-label">Затрудняюсь ответить</span>
-              </label>
+            <li class="site-list__item">
+              <a class="site-list__link site-list__item--current">Форма отзыва</a>
+            </li>
+            <li class="site-list__item">
+              <a class="site-list__link" href="https://htmlacademy.ru">html Academy</a>
             </li>
           </ul>
-        </fieldset>
-        <fieldset class="feedback__field">
-          <legend class="text-block__title">посещенные достопримечательности:</legend>
-          <ul class="feedback__list">
-            <li class="feedback__item--checkbox">
-              <label class="feedback__form-label">
-                <input class="feedback__choice" type="checkbox" name="devil's bridge" checked>
-                <span class="control-label">Мост Дьявола</span>
-              </label>
+        </nav>
+      </header>
+      <!--Основное содержание-->
+      <main class="main-container">
+        <h1 class="visually-hidden">Формы</h1>
+        <header class="welcome welcome--catalog">
+          <img class="welcome__img welcome__img--catalog" src="/img/catalog/sedona.svg" width="229" height="39"
+            alt="Седона">
+        </header>
+        <section class="about-form">
+          <h2 class="about-form__title">Оставьте свой отзыв</h2>
+          <p class="about-form__description">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о
+            посещенных вами достопримечательностях</p>
+        </section>
+        <section class="feedback">
+          <h2 class="visually-hidden">Формы для заполнения</h2>
+          <form class="feedback__form" action="https://echo.htmlacademy.ru/" method="post">
+
+            <div class="feedback__wrapper">
+              <fieldset class="feedback__field">
+                <legend class="text-block__title">Представьтесь:</legend>
+                <label class="feedback__form-label" for="name">
+                  ИМЯ*:</label>
+                <input class="feedback__input" type="text" id="name" name="name" placeholder="Петр" required>
+                <label class="feedback__form-label" for="surname">
+                  ФАМИЛИЯ*:</label>
+                <input class="feedback__input" type="text" id="surname" name="surname" placeholder="Пустота" required>
+                <label class="feedback__form-label" for="father-name">
+                  Отчество:</label>
+                <input class="feedback__input" type="text" id="father-name" name="father-name" placeholder="Викторович"
+                  required>
+              </fieldset>
+            </div>
+            <div class="feedback__wrapper">
+              <fieldset class="feedback__field">
+                <legend class="text-block__title">Контактная информация:</legend>
+                <label class="feedback__form-label" for="number">Контактный телефон*:</label>
+                <input class="feedback__input feedback__input--contacts" placeholder="Введите телефон" type="tel"
+                  name="phone-number" id="number" required>
+
+                <button class="feedback__button" type="button">
+                  <span class="visually-hidden">Телефон</span>
+                </button>
+                <label class="feedback__form-label" for="email">Электронная почта*:</label>
+                <input class="feedback__input feedback__input--contacts" placeholder="Введите e-mail" type="email"
+                  name="email" id="email" required>
+
+                <button class="feedback__button" type="button">
+                  <span class="visually-hidden">Почта</span>
+                </button>
+              </fieldset>
+            </div>
+            <div class="feedback__wrapper--line">
+              <fieldset class="feedback__field">
+                <legend class="text-block__title">ВАше Общее впечатление:</legend>
+                <ul class="feedback__list">
+                  <li class="feedback__item">
+                    <label class="feedback__form-label">
+                      <input class="feedback__choice" type="radio" name="feedback" value="mostly positive" checked>
+                      <span class="control-label">Скорее положительное</span>
+                    </label>
+                  </li>
+                  <li class="feedback__item">
+                    <label class="feedback__form-label">
+                      <input class="feedback__choice" type="radio" name="feedback" value="mostly negative" checked>
+                      <span class="control-label">Скорее отрицательное</span>
+                    </label>
+                  </li>
+                  <li class="feedback__item">
+                    <label class="feedback__form-label">
+                      <input class="feedback__choice" type="radio" name="feedback" value="hard to say" checked>
+                      <span class="control-label">Затрудняюсь ответить</span>
+                    </label>
+                  </li>
+                </ul>
+              </fieldset>
+            </div>
+            <div class="feedback__wrapper--line">
+              <fieldset class="feedback__field">
+                <legend class="text-block__title">посещенные достопримечательности:</legend>
+                <ul class="feedback__list">
+                  <li class="feedback__item--checkbox">
+                    <label class="feedback__form-label">
+                      <input class="feedback__choice" type="checkbox" name="devil's bridge" checked>
+                      <span class="control-label">Мост Дьявола</span>
+                    </label>
+                  </li>
+                  <li class="feedback__item--checkbox">
+                    <label class="feedback__form-label">
+                      <input class="feedback__choice" type="checkbox" name="Mount bell" checked>
+                      <span class="control-label">Гора-Колокол</span>
+                    </label>
+                  </li>
+                  <li class="feedback__item--checkbox">
+                    <label class="feedback__form-label">
+                      <input class="feedback__choice" type="checkbox" name="slise park" checked>
+                      <span class="control-label">Слайд-парк</span>
+                    </label>
+                  </li>
+                  <li class="feedback__item--checkbox">
+                    <label class="feedback__form-label">
+                      <input class="feedback__choice" type="checkbox" name="red rocks">
+                      <span class="control-label">Красные скалы</span>
+                    </label>
+                  </li>
+                </ul>
+              </fieldset>
+              <fieldset class="feedback__field">
+                <legend class="text-block__title">Опишите свои эмоции:</legend>
+
+                <textarea class="feedback__input--text" name="text"
+                  id="text">Опишите подробно все свои восторги </textarea>
+                <button class="button feedback__button--blue" type="submit">ОТПРАВИТЬ ОТЗЫВ </button>
+                <p class="feedback__text">* — обязательные поля</p>
+              </fieldset>
+            </div>
+          </form>
+        </section>
+      </main>
+      <!--Подвал-->
+      <footer class="footer">
+        <div class="hashtag">
+          <p class="hashtag__description">#visitSEDONA</p>
+        </div>
+        <div class="social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+                <span class="visually-hidden"> Мы в Вконтакте</span>
+              </a>
             </li>
-            <li class="feedback__item--checkbox">
-              <label class="feedback__form-label">
-                <input class="feedback__choice" type="checkbox" name="Mount bell" checked>
-                <span class="control-label">Гора-Колокол</span>
-              </label>
+            <li class="social__item">
+              <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
+                <span class="visually-hidden">Мы в Телеграме</span>
+              </a>
             </li>
-            <li class="feedback__item--checkbox">
-              <label class="feedback__form-label">
-                <input class="feedback__choice" type="checkbox" name="slise park" checked>
-                <span class="control-label">Слайд-парк</span>
-              </label>
-            </li>
-            <li class="feedback__item--checkbox">
-              <label class="feedback__form-label">
-                <input class="feedback__choice" type="checkbox" name="red rocks">
-                <span class="control-label">Красные скалы</span>
-              </label>
+            <li class="social__item">
+              <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
+                <span class="visually-hidden">Мы в Ютубе</span>
+              </a>
             </li>
           </ul>
-        </fieldset>
-        <fieldset class="feedback__field">
-          <legend class="text-block__title">Опишите свои эмоции:</legend>
-
-          <textarea class="feedback__input--text" name="text" id="text">Опишите подробно все свои восторги </textarea>
-          <button class="button feedback__button--blue" type="submit">ОТПРАВИТЬ ОТЗЫВ </button>
-          <p class="feedback__text">* — обязательные поля</p>
-        </fieldset>
-      </form>
-    </section>
-  </main>
-  <!--Подвал-->
-  <footer class="footer">
-    <div class="hashtag">
-      <p class="hashtag__description">#visitSEDONA</p>
-    </div>
-    <div class="social">
-      <ul class="social__list">
-        <li class="social__item">
-          <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-            <span class="visually-hidden"> Мы в Вконтакте</span>
+        </div>
+        <div class="html-academy">
+          <b class="text-block__description">Разработано:</b>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <svg aria-hidden="true" focusable="false" width="27" height="35" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M13.6 0h-.1L0 1.4v24.7l13.5 8 13.4-8V1.4L13.6 0ZM25 12.1 13.5 5.3v-.1h-.1l-.1-.1v.1L1.9 12.1v-9l11.5-1.2L25 3.1v9ZM13.4 6.8l11.5 6.7-4.5 2.6-7.1-4.2v1.4l5.9 3.5-.9.5-5-3v1.4l3.8 2.3-.8.5-3-1.8v1.4l1.9 1.1-1.8 1.1L2 13.6l11.4-6.8ZM1.9 15.1l11.4 6.8v1l-7.9-4.7v1.4l8 4.8v1.1l-8-4.7v1.4l8 4.8 8.1-4.9v-5.2l3.4-2v10l-11.5 6.9L1.9 25v-9.9Z" />
+            </svg>
           </a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
-            <span class="visually-hidden">Мы в Телеграме</span>
-          </a>
-        </li>
-        <li class="social__item">
-          <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-            <span class="visually-hidden">Мы в Ютубе</span>
-          </a>
-        </li>
-      </ul>
+        </div>
+      </footer>
     </div>
-    <div class="html-academy">
-      <b class="text-block__description">Разработано:</b>
-      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-        <svg aria-hidden="true" focusable="false" width="27" height="35" xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M13.6 0h-.1L0 1.4v24.7l13.5 8 13.4-8V1.4L13.6 0ZM25 12.1 13.5 5.3v-.1h-.1l-.1-.1v.1L1.9 12.1v-9l11.5-1.2L25 3.1v9ZM13.4 6.8l11.5 6.7-4.5 2.6-7.1-4.2v1.4l5.9 3.5-.9.5-5-3v1.4l3.8 2.3-.8.5-3-1.8v1.4l1.9 1.1-1.8 1.1L2 13.6l11.4-6.8ZM1.9 15.1l11.4 6.8v1l-7.9-4.7v1.4l8 4.8v1.1l-8-4.7v1.4l8 4.8 8.1-4.9v-5.2l3.4-2v10l-11.5 6.9L1.9 25v-9.9Z" />
-        </svg>
-      </a>
-    </div>
-  </footer>
+  </div>
 </body>
 
 </html>
