--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
       <!--Шапка-->
       <header class="header">
         <a class="header__logo" href="index.html">
-          <img class="header_img" src="/img/logo_sedona.svg" width="185" height="96" alt="Логотип Седоны">
+          <img class="header__img" src="/img/logo_sedona.svg" width="185" height="96" alt="Логотип Седоны">
         </a>
         <nav class="nav nav--closed nav--nojs">
           <button class="nav__toggle" type="button">
@@ -28,8 +28,8 @@
           </button>
           <div class="nav__wrapper">
             <ul class="nav__list site-list">
-              <li class="site-list__item site-list__item--current">
-                <a class="site-list__link">Главная</a>
+              <li class="site-list__item">
+                <a class="site-list__link site-list__link--current">Главная</a>
               </li>
               <li class="site-list__item">
                 <a class="site-list__link" href="catalog.html">Фото и видео</a>
@@ -166,6 +166,8 @@
       </footer>
     </div>
   </div>
+
+  <script src="js/script.js"></script>
 </body>
 
 </html>
