--- a/source/index.html
+++ b/source/index.html
@@ -17,6 +17,7 @@
           <img class="header__img" src="/img/logo_sedona.svg" width="185" height="96" alt="Логотип Седоны">
         </a>
         <nav class="nav nav--closed nav--nojs">
+          <div class="nav__wrapper">
           <button class="nav__toggle" type="button">
             <svg class="nav__img--closed" aria-hidden="true" focusable="false" width="23" height="22" xmlns="http://www.w3.org/2000/svg">
               <path d="M22.9 0H0v4h22.9V0Zm0 9H0v4h22.9V9Zm0 9H0v4h22.9v-4Z"/>
@@ -26,7 +27,7 @@
 </svg>
             <span class="visually-hidden">Открыть меню</span>
           </button>
-          <div class="nav__wrapper">
+
             <ul class="nav__list site-list">
               <li class="site-list__item">
                 <a class="site-list__link site-list__link--current">Главная</a>
@@ -103,7 +104,7 @@
             <li class="advantages__item">
               <h3 class="advantages__title">Небольшая площадь</h3>
               <p class="advantages__description">-№3-</p>
-              <p class="advantages__description"> Все достопримечательности находятся очень близко</p>
+              <p class="advantages__description"> Все интересные места находятся очень близко</p>
             </li>
             <li class="advantages__item">
 
@@ -127,7 +128,13 @@
         </section>
         <section class="map">
           <h2 class="visually-hidden">Седона на карте </h2>
-          <img class="map__image" src="/img/map-mobile.jpg" width="320" height="350" alt="Карта">
+          <iframe class="map__img" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104782.35567979202!2d-111.86278226426538!3d34.844953434575736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1662141214368!5m2!1sru!2sru"
+          width="600"
+          height="450"
+          allowfullscreen
+          title="Карта Седоны">
+          </iframe>
+
         </section>
       </main>
       <!--Подвал-->
