--- a/source/catalog.html
+++ b/source/catalog.html
@@ -75,6 +75,11 @@
             <li class="fotoalbum__item fotoalbum__item--first">
               <div class="fotoalbum__picture-wrapper fotoalbum__picture-wrapper--first-line">
                 <picture>
+                  <!--Седьмое задание начало-->
+              <source type="image/webp" media="(min-width: 1200px)" srcset="img/catalog/landscape-desktop.webp 1x, img/catalog/landscape-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/catalog/landscape-tablet.webp 1x, img/catalog/landscape-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/catalog/landscape-mobile.webp, img/catalog/landscape-mobile@2x.webp 2x">
+      <!--Седьмое задание конец-->
                   <source media="(min-width: 1200px)"
                     srcset="img/catalog/landscape-desktop.jpg 1x, img/catalog/landscape-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)"
