--- a/source/catalog.html
+++ b/source/catalog.html
@@ -60,7 +60,7 @@
         </header>
         <section class="about-catalog">
           <h2 class="about-catalog__title">Фото и видео</h2>
-          <p class="about-catalog__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам
+          <p class="about-catalog__description">Не можете решиться на путешествие из-за курса? <br> Фотографии помогут вам
             забыть
             о
             политике и экономике.</p>
